# Fall_Detection_Aiot

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
components/edge_impulse/: CMakeLists.txt  README.txt
components/edge_impulse/model-parameters/: model_metadata.h  model_variables.h
components/edge_impulse/tflite-model/: tflite_learn_944636_3_compiled.cpp  tflite_learn_944636_3_compiled.h
data_logs/: fall_soft_01.csv  fall_soft_02.csv  fall_soft_03.csv  fall_soft_04.csv  fall_soft_05.csv  lying_01.csv  lying_02.csv  lying_03.csv  normal_01.csv  normal_02.csv  normal_03.csv  shake_01.csv  shake_02.csv  shake_03.csv
main/: CMakeLists.txt  app_config.h  ei_inference_wrapper.cpp  ei_inference_wrapper.h  main.c  telegram_credentials_example.h  wifi_credentials_example.h
